# hueshell

./: README.rst  setup.cfg  setup.py
hueshell/: .hue.ini  __init__.py  __main__.py  hue.py
