[metadata]
name = hueshell
version = 1.0.0
author = Felix Pan
author-email = tinylambda@gmail.com
license = MIT
long_description = file: README.rst
url = https://github.com/tinylambda/hueshell
requires-python = >= 3.6
classifiers =
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Analyst with Python skills
    Operating System :: OS Independent
    Programming Language :: Python
